--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "set NODE_ENV=development&& node server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
     "prod": "set NODE_ENV=production&& node server.js"
   },
   "keywords": [
@@ -21,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express": "^4.18.2"
     "sqlite3": "^5.1.7"
   }
 }
